[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tbrw"
version = "0.1.0"
description = "Tree-Based Random Walk – grow and explore random trees."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["random walk", "random tree", "graph", "stochastic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
"Source" = "https://github.com/yourusername/tbrw"
"Bug Tracker" = "https://github.com/yourusername/tbrw/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
